2011-04-29  vadim  <vadim@netcitadel.com>

	* iosaclAdvancedDialog.cpp (accept): fixes #2368 and SF bug
	3294457 "External install script". External install script name
	and arguments weren't saved for IOS firewall objects.

	* snmpNetworkDiscoveryWizard/ND_ProgressPage.h: fixes #2370, #2371
	"broken signals in network discovery wizard". Network discovery
	wizard was not correctly initializased and did not work.

2011-04-25  Vadim Kurland  <vadim@netcitadel.com>

	* instDialog_ui_ops.cpp (readInstallerOptionsFromDialog):
	tentative fix for SF bug 3169045 "Batch installer lists IPv4
	address as management address". Built-in installer wanted to use
	management interface address in batch mode even when alternative
	address or putty session name was provided. This happens only in
	batch mode install.

	* VERSION (GENERATION): version 4.2.0 released; started 4.2.1

2011-04-20  vadim  <vadim@netcitadel.com>

	* configlets/pix_os/script_skeleton: fixed bug (no #): "clear"
	commands were not added when option "generate only access-list,
	access-group, nat, static..." was in effect; also making sure
	"clear" commands for object-groups and ssh are not added when
	option "do not add clear commands" is on. This affects PIX/ASA/FWSM.

2011-04-19  Vadim Kurland  <vadim@netcitadel.com>

	* RoutingCompiler_ipt.cpp (compile): see #2359 "Crash when
	compiling single rule with IPv6 destination and IPv4 gateway or
	interface". Routing compiler for iptables does not support ipv6 at
	this time and will issue a warning when user tries to place ipv6
	address or network in a routing rule. The warning does not appear
	when ipv6 address is a member of a group used in the rule. Also
	see #1575.

2011-04-17  vadim  <vadim@netcitadel.com>

	* fwbedit.cpp (main): added command line switch "-d" to function
	"import" in fwbedit. This switch activates object deduplication
	on import.

2011-04-15  vadim  <vadim@netcitadel.com>

	* fwbedit.cpp (main): see #2328 "Add ability to run firewall import